name:                tateti-tateti
version:             0.1.0.0
synopsis:            Meta tic-tac-toe ncurses game.
description:         Please see README.md
homepage:            http://github.com/alvare/tateti-tateti#readme
license:             BSD3
license-file:        LICENSE
author:              Ezequiel A. Alvarez
maintainer:          welcometothechango@mgail.com
copyright:           2015 Ezequiel A. Alvarez
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable tateti-tateti
  hs-source-dirs:      src
  other-modules:       Types
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ncurses
